# platform.core.uifw.inputdelegator

./: CMakeLists.txt  org.tizen.inputdelegator.xml
inc/: Debug.h  MicEffector.h  MoreOption.h  SttFeedback.h  SttManager.h  WInputSttMicEffect.h  w-input-emoticon.h  w-input-keyboard.h  w-input-selector.h  w-input-smartreply.h  w-input-stt-engine.h  w-input-stt-ise.h  w-input-stt-tos-text.h  w-input-stt-tos.h  w-input-stt-voice.h  w-input-template.h
packaging/: org.tizen.inputdelegator.spec
po/: CMakeLists.txt  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  km.po  kn.po  (+44 more)
res/edje/: w-input-selector.edc  w-input-stt-button.edc  w-input-stt.edc
shared/res/: org.tizen.inputdelegator_color.xml  org.tizen.inputdelegator_font.xml
src/: CMakeLists.txt  MicEffector.cpp  MoreOption.cpp  SttFeedback.cpp  SttManager.cpp  WInputSttMicEffect.cpp  w-input-emoticon.cpp  w-input-keyboard.cpp  w-input-selector.cpp  w-input-smartreply.cpp  w-input-stt-engine.cpp  w-input-stt-ise.cpp  w-input-stt-tos.cpp  w-input-stt-voice.cpp  w-input-template.cpp
