
PKG_CHECK_MODULES(DLOG REQUIRED dlog)
PKG_CHECK_MODULES(CAPI_APPFW_APPLICATION REQUIRED capi-appfw-application)
PKG_CHECK_MODULES(CAPI_MEDIA_WAV_PLAYER REQUIRED capi-media-wav-player)
PKG_CHECK_MODULES(CAPI_SYSTEM_DEVICE REQUIRED capi-system-device)
PKG_CHECK_MODULES(EINA REQUIRED eina)
PKG_CHECK_MODULES(ELEMENTARY REQUIRED elementary)
PKG_CHECK_MODULES(EFL_ASSIST REQUIRED efl-assist)
PKG_CHECK_MODULES(EFL_EXTENSION REQUIRED efl-extension)
PKG_CHECK_MODULES(FEEDBACK REQUIRED feedback)
PKG_CHECK_MODULES(STT REQUIRED stt)
PKG_CHECK_MODULES(VCONF REQUIRED vconf)
PKG_CHECK_MODULES(DB_UTIL_PKG REQUIRED db-util)
PKG_CHECK_MODULES(SQLITE3_PKG REQUIRED sqlite3)
#PKG_CHECK_MODULES(SMARTREPLY REQUIRED smartreply)
#PKG_CHECK_MODULES(GRAPHICS_EXTENSION REQUIRED graphics-extension)
#PKG_CHECK_MODULES(WNOTI_SERVICE REQUIRED wnoti-service2)
#PKG_CHECK_MODULES(SAP_CLIENT_STUB_API REQUIRED sap-client-stub-api)


SET(W_INPUT_SELECTOR inputdelegator)
FILE(GLOB W_INPUT_SELECTOR_SRCS *.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}
		${CMAKE_SOURCE_DIR}/inc
		${DLOG_INCLUDE_DIRS}
		${CAPI_APPFW_APPLICATION_INCLUDE_DIRS}
		${CAPI_MEDIA_WAV_PLAYER_INCLUDE_DIRS}
		${CAPI_SYSTEM_DEVICE_INCLUDE_DIRS}
		${EINA_INCLUDE_DIRS}
		${ELEMENTARY_INCLUDE_DIRS}
		${EFL_ASSIST_INCLUDE_DIRS}
		${EFL_EXTENSION_INCLUDE_DIRS}
		${GRAPHICS_EXTENSION_INCLUDE_DIRS}
		${FEEDBACK_INCLUDE_DIRS}
		${STT_INCLUDE_DIRS}
		${VCONF_INCLUDE_DIRS}
		${DB_UTIL_PKG_INCLUDE_DIRS}
		${SQLITE3_PKG_INCLUDE_DIRS}
		${DATA_CONTROL_INCLUDE_DIRS}
		${SMARTREPLY_INCLUDE_DIRS}
		${WNOTI_SERVICE_INCLUDE_DIRS}
		${SAP_CLIENT_STUB_API_INCLUDE_DIRS})


LINK_DIRECTORIES(${DLOG_LIBRARY_DIRS}
		${CAPI_APPFW_APPLICATION_LIBRARY_DIRS}
		${CAPI_MEDIA_WAV_PLAYER_LIBRARY_DIRS}
		${CAPI_SYSTEM_DEVICE_LIBRARY_DIRS}
		${EINA_LIBRARY_DIRS}
		${ELEMENTARY_LIBRARY_DIRS}
		${EFL_ASSIST_LIBRARY_DIRS}
		${EFL_EXTENSION_LIBRARY_DIRS}
		${GRAPHICS_EXTENSION_LIBRARY_DIRS}
		${FEEDBACK_LIBRARY_DIRS}
		${STT_LIBRARY_DIRS}
		${DB_UTIL_PKG_LIBRARY_DIRS}
		${SQLITE3_PKG_LIBRARY_DIRS}
		${VCONF_LIBRARY_DIRS}
		${SMARTREPLY_LIBRARY_DIRS}
		${WNOTI_SERVICE_LIBRARY_DIRS}
		${SAP_CLIENT_STUB_API_LIBRARY_DIRS}
		)

ADD_EXECUTABLE(${W_INPUT_SELECTOR}
		${W_INPUT_SELECTOR_SRCS})

TARGET_LINK_LIBRARIES(${W_INPUT_SELECTOR}
		${DLOG_LIBRARIES}
		${CAPI_APPFW_APPLICATION_LIBRARIES}
		${CAPI_MEDIA_WAV_PLAYER_LIBRARIES}
		${CAPI_SYSTEM_DEVICE_LIBRARIES}
		${EINA_LIBRARIES}
		${ELEMENTARY_LIBRARIES}
		${EFL_ASSIST_LIBRARIES}
		${EFL_EXTENSION_LIBRARIES}
		${FEEDBACK_LIBRARIES}
		${STT_LIBRARIES}
		${DB_UTIL_PKG_LIBRARIES}
		${SQLITE3_PKG_LIBRARIES}
		${VCONF_LIBRARIES}
#		${SMARTREPLY_LIBRARIES}
		)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall -fPIE")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CXXFLAGS} -Wall -fPIE")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g -Wall -fPIE")
SET(CMAKE_C_FLAGS_RELEASE "-O2 -Wall -fPIE")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -fPIE")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -g -fPIE")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")

INSTALL(TARGETS ${W_INPUT_SELECTOR} DESTINATION bin)

